<package>
  <name>robot_state_publisher</name>
  <version>1.13.5</version>
  <description>
    This package allows you to publish the state of a robot to
    <a href="http://ros.org/wiki/tf">tf</a>. Once the state gets published, it is
    available to all components in the system that also use <tt>tf</tt>.
    The package takes the joint angles of the robot as input
    and publishes the 3D poses of the robot links, using a kinematic
    tree model of the robot. The package can both be used as a library
    and as a ROS node.  This package has been well tested and the code
    is stable. No major changes are planned in the near future.
  </description>

  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <author email="wim@willowgarage.com">Wim Meeussen</author>

  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/robot_state_publisher</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <run_depend>catkin</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_kdl</run_depend>

  <test_depend>rostest</test_depend>
</package>
