<?xml version="1.0"?>
<package format="2">
  <name>socketcan_bridge</name>
  <version>0.7.6</version>
  <description>Conversion nodes for messages from SocketCAN to a ROS Topic and vice versa.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <author email="ivor@iwanders.net">Ivor Wanders</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>pb_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
